# BlenderJPS

./: .gitignore  README.md  pyproject.toml
.github/workflows/: blender.yml  lint.yml
blender_jps/: __init__.py  install_utils.py  operators.py  panels.py  preferences.py
blender_jps/tests/: test_plugin_loading.py
