[project]
name = "BlenderJPS"
version = "0.1.3"
requires-python = ">=3.11"


[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]  # Allow imports after ensure_deps_in_path()

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
